# great-sage

./: .gitignore  Cargo.toml  README.md  friday.toml  great-sage.toml  rust-toolchain.toml
adapters/: .gitkeep
config/: backup_schedule.toml  grpc_ports.toml  internet_whitelist.txt  paths.toml  stt_vocabulary_hints.txt  system_prompt_great_sage.txt  system_prompt_professor.txt  token_budget.toml  vram_limits.toml
crates/agent/: Cargo.toml
crates/agent/src/: history.rs  lib.rs  parser.rs  react.rs
crates/alignment/: Cargo.toml
crates/alignment/src/: constitution.rs  lib.rs  self_critique.rs
crates/cli/: Cargo.toml
crates/cli/src/: chat.rs  diagnose.rs  main.rs  refresh.rs  research.rs
crates/inference/: Cargo.toml
crates/inference/src/: backend.rs  chat_template.rs  lib.rs  sampler.rs  streaming.rs
crates/memory/: Cargo.toml
crates/memory/src/: context.rs  embedder.rs  importance.rs  l1_kv_cache.rs  l2_summaries.rs  l3_vector.rs  l4_facts.rs  lib.rs  writer.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: config.rs  lib.rs  main.rs  main_loop.rs  scheduler.rs  startup.rs
crates/router/: Cargo.toml
crates/router/src/: adapters.rs  classifier.rs  lib.rs  swap.rs
crates/smoke/: Cargo.toml
crates/smoke/src/: main.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: bpe_scratch.rs  hf_wrapper.rs  lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: calculate.rs  core.rs  guard.rs  lib.rs  research_mode.rs  run_command.rs  web_fetch.rs  web_search.rs
crates/training/: Cargo.toml
crates/training/src/: checkpoint.rs  data.rs  eval.rs  finetune.rs  lib.rs  lora.rs  moe.rs  pretrain.rs  refresh.rs
crates/voice/: Cargo.toml
crates/voice/src/: capture.rs  lib.rs  playback.rs  ringbuffer.rs  sentence_stream.rs  stt.rs  tts.rs  vad.rs  wakeword.rs
data/: .gitkeep
docs/: BLUEPRINT.md  DECISIONS.md  PHASE_NOTES.md
models/: .gitkeep
proto/: tempest.proto
scripts/: bench.ps1  bootstrap.ps1  build_all.ps1  download_models.ps1  generate_proto.ps1  health_check.ps1  rebuild_faiss.ps1  restore_backup.ps1  setup_environment.ps1  start_all.ps1  stop_all.ps1  verify_environment.ps1  weekly_refresh.ps1
services/gateway/: go.mod
services/gateway/proto/: tempest.pb.go  tempest_grpc.pb.go
services/inference/: pyproject.toml  requirements.txt
services/inference/proto/: tempest_pb2.py  tempest_pb2_grpc.py
services/inference/src/: config.py  health.py  main.py  vram_monitor.py
services/inference/src/embeddings/: batch_embed.py  bge_m3.py
services/inference/src/grpc/: server.py
services/inference/src/inference/: batch_manager.py  generator.py  kv_cache.py  model_loader.py
services/inference/src/stt/: vocabulary_hints.py  vosk_service.py
services/orchestrator/: Cargo.toml  build.rs
services/orchestrator/src/: lib.rs  main.rs
services/orchestrator/src/context/: assembler.rs  compressor.rs  mod.rs  token_budget.rs
services/orchestrator/src/db/: knowledge_db.rs  memory_db.rs  mod.rs  progress_db.rs  system_db.rs  verification_db.rs
services/orchestrator/src/grpc/: client.rs  mod.rs
services/orchestrator/src/knowledge/: faiss_client.rs  graph.rs  ingestion.rs  mod.rs  sanitiser.rs
services/orchestrator/src/memory/: episodic.rs  mod.rs  procedural.rs  semantic.rs  working.rs
services/orchestrator/src/orchestrator/: mod.rs  routing.rs  session.rs
services/orchestrator/src/security/: anomaly.rs  audit.rs  input_filter.rs  mod.rs  output_filter.rs
services/orchestrator/src/voice/: mod.rs  mode_manager.rs  tts_streamer.rs  wake_word.rs
tests/security/: injection_patterns.txt  whitelist_bypass_attempts.txt
