[workspace]
resolver = "2"
members = [
    "crates/inference",
    "crates/tokenizer",
    "crates/memory",
    "crates/agent",
    "crates/tools",
    "crates/router",
    "crates/voice",
    "crates/training",
    "crates/alignment",
    "crates/orchestrator",
    "crates/cli",
    "crates/smoke",
]

[workspace.package]
edition = "2021"
rust-version = "1.78"

[workspace.dependencies]
candle-core = "0.6"
candle-nn = "0.6"
candle-transformers = "0.6"
tokenizers = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
hnsw_rs = "0.3"
cpal = "0.15"
whisper-rs = "0.11"
ort = "2.0"
