[package]
name = "friday-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
friday-inference = { path = "../inference" }
friday-memory = { path = "../memory" }
friday-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
