[package]
name = "great-sage-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
great-sage-inference = { path = "../inference" }
great-sage-memory = { path = "../memory" }
great-sage-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
