[package]
name = "great-sage-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "great-sage-cli"
path = "src/main.rs"

[dependencies]
great-sage-inference = { path = "../inference" }
great-sage-tokenizer = { path = "../tokenizer" }
great-sage-memory = { path = "../memory" }
great-sage-agent = { path = "../agent" }
great-sage-tools = { path = "../tools" }
great-sage-training = { path = "../training" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
