[package]
name = "great-sage-inference"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
