[package]
name = "friday-orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "friday"
path = "src/main.rs"

[dependencies]
friday-inference = { path = "../inference" }
friday-tokenizer = { path = "../tokenizer" }
friday-memory = { path = "../memory" }
friday-agent = { path = "../agent" }
friday-tools = { path = "../tools" }
friday-router = { path = "../router" }
friday-voice = { path = "../voice" }
friday-alignment = { path = "../alignment" }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
