[package]
name = "great-sage-orchestrator"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "Great Sage"
path = "src/main.rs"

[dependencies]
great-sage-inference = { path = "../inference" }
great-sage-tokenizer = { path = "../tokenizer" }
great-sage-memory = { path = "../memory" }
great-sage-agent = { path = "../agent" }
great-sage-tools = { path = "../tools" }
great-sage-router = { path = "../router" }
great-sage-voice = { path = "../voice" }
great-sage-alignment = { path = "../alignment" }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
