[package]
name = "friday-training"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
